added get all customers api definition in openapi file
